# IntegrityChecker

./: .gitignore  CMakeLists.txt  README.md  daemon.cpp  daemon.h  handler.cpp  handler.h  main.cpp
src/: crc32.cpp  daemon.cpp  daemon.h  handler.cpp  handler.h  main.cpp
tests/: conftest.py  test_unit.py
